deploy: 2744afb5897db8ecd9776fd5bcc15340a1f32727

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta http-equiv="content-security-policy" content="">
 	<link rel="stylesheet" href="/_app/assets/vendor-d0a5a38b.css">
 	<link rel="stylesheet" href="/_app/assets/pages/index.svelte-5c59e076.css">
-	<link rel="modulepreload" href="/_app/start-b2b3dc29.js">
+	<link rel="modulepreload" href="/_app/start-32857465.js">
 	<link rel="modulepreload" href="/_app/chunks/vendor-f5667196.js">
 	<link rel="modulepreload" href="/_app/layout.svelte-b028ef06.js">
 	<link rel="modulepreload" href="/_app/pages/index.svelte-998a5151.js">
@@ -27,7 +27,7 @@
     <span class="svelte-1p5z8n1"><div class="datepicker svelte-1lorc63" style="\n    --button-background-color: #fff;\n    --button-border-color: #eee;\n    --button-text-color: #333;\n    --highlight-color: #f7901e;\n    --day-background-color: none;\n    --day-text-color: #4a4a4a;\n    --day-highlighted-background-color: #efefef;\n    --day-highlighted-text-color: #4a4a4a;\n    \n  ">
 <div class="sc-popover svelte-mc1z8c"><div class="trigger"><div slot="trigger" class="svelte-1lorc63"><button class="svelte-1p5z8n1">сегодня</button></div></div>
   <div class="contents-wrapper svelte-mc1z8c" style="transform: translate(-50%,-50%) translate(0px, 0px)"><div class="contents svelte-mc1z8c"><div class="contents-inner svelte-mc1z8c"><div slot="contents" class="svelte-1lorc63"><div class="calendar svelte-1lorc63"><div class="title"><div class="heading-section svelte-1dqf106"><div class="control svelte-1dqf106"><i class="arrow left svelte-1dqf106"></i></div>
-    <div class="label svelte-1dqf106">November 2022</div> 
+    <div class="label svelte-1dqf106">December 2022</div> 
     <div class="control svelte-1dqf106 enabled"><i class="arrow right svelte-1dqf106"></i></div></div>
   <div class="month-selector svelte-1dqf106"><div class="month-selector--month svelte-1dqf106"><span class="svelte-1dqf106">Jan</span>
       </div><div class="month-selector--month svelte-1dqf106"><span class="svelte-1dqf106">Feb</span>
@@ -39,58 +39,58 @@
       </div><div class="month-selector--month svelte-1dqf106"><span class="svelte-1dqf106">Aug</span>
       </div><div class="month-selector--month svelte-1dqf106"><span class="svelte-1dqf106">Sep</span>
       </div><div class="month-selector--month svelte-1dqf106"><span class="svelte-1dqf106">Oct</span>
-      </div><div class="month-selector--month svelte-1dqf106 selected selectable"><span class="svelte-1dqf106">Nov</span>
-      </div><div class="month-selector--month svelte-1dqf106  selectable"><span class="svelte-1dqf106">Dec</span>
+      </div><div class="month-selector--month svelte-1dqf106"><span class="svelte-1dqf106">Nov</span>
+      </div><div class="month-selector--month svelte-1dqf106 selected selectable"><span class="svelte-1dqf106">Dec</span>
       </div></div>
 </div>
         <div class="legend svelte-1lorc63"><span class="svelte-1lorc63">Sun</span><span class="svelte-1lorc63">Mon</span><span class="svelte-1lorc63">Tue</span><span class="svelte-1lorc63">Wed</span><span class="svelte-1lorc63">Thu</span><span class="svelte-1lorc63">Fri</span><span class="svelte-1lorc63">Sat</span></div>
-        <div class="month-container svelte-ny3kda"><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh outside-month  is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">30</button>
-    </div><div class="day svelte-1f2gkwh outside-month  is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">31</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">1</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">2</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">3</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">4</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">5</button>
+        <div class="month-container svelte-ny3kda"><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh outside-month  is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">27</button>
+    </div><div class="day svelte-1f2gkwh outside-month  is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">28</button>
+    </div><div class="day svelte-1f2gkwh outside-month  is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">29</button>
+    </div><div class="day svelte-1f2gkwh outside-month  is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">30</button>
+    </div><div class="day svelte-1f2gkwh  is-today"><button class="day--label svelte-1f2gkwh selected highlighted" type="button">1</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">2</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">3</button>
     </div>
-</div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">6</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">7</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">8</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">9</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">10</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">11</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">12</button>
+</div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">4</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">5</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">6</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">7</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">8</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">9</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">10</button>
     </div>
-</div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">13</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">14</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">15</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">16</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">17</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">18</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">19</button>
+</div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">11</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">12</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">13</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">14</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">15</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">16</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">17</button>
     </div>
-</div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">20</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">21</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">22</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">23</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">24</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">25</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">26</button>
+</div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">18</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">19</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">20</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">21</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">22</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">23</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">24</button>
     </div>
-</div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">27</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">28</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">29</button>
-    </div><div class="day svelte-1f2gkwh  is-today"><button class="day--label svelte-1f2gkwh selected highlighted" type="button">30</button>
-    </div><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">1</button>
+</div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">25</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">26</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">27</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">28</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">29</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">30</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">31</button>
+    </div>
+</div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">1</button>
     </div><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">2</button>
     </div><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">3</button>
-    </div>
-</div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">4</button>
+    </div><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">4</button>
     </div><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">5</button>
     </div><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">6</button>
     </div><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">7</button>
-    </div><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">8</button>
-    </div><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">9</button>
-    </div><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">10</button>
     </div>
 </div>
 </div></div></div></div></div></div>
@@ -101,23 +101,23 @@
   <div class="pairs  svelte-1f7tk5u"><div class="pair  svelte-zlpy6h"><svg class="pin svelte-zlpy6h" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="whom svelte-zlpy6h"><span class="whomName svelte-zlpy6h">Александр Плаксенко</span>
     <span class="arrow svelte-zlpy6h"></span></div>
-  <div>Макриди Екатерина</div>
+  <div>Колодько Денис</div>
 </div><div class="pair  svelte-zlpy6h"><svg class="pin svelte-zlpy6h" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="whom svelte-zlpy6h"><span class="whomName svelte-zlpy6h">Колодько Денис</span>
     <span class="arrow svelte-zlpy6h"></span></div>
-  <div>Александр Плаксенко</div>
+  <div>Макриди Екатерина</div>
 </div><div class="pair  svelte-zlpy6h"><svg class="pin svelte-zlpy6h" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="whom svelte-zlpy6h"><span class="whomName svelte-zlpy6h">Макриди Екатерина</span>
     <span class="arrow svelte-zlpy6h"></span></div>
-  <div>Колодько Денис</div>
+  <div>Александр Плаксенко</div>
 </div></div>
 </main>
 
 
-		<script type="module" data-hydrate="1o738uk">
-		import { start } from "/_app/start-b2b3dc29.js";
+		<script type="module" data-hydrate="p986cg">
+		import { start } from "/_app/start-32857465.js";
 		start({
-			target: document.querySelector('[data-hydrate="1o738uk"]').parentNode,
+			target: document.querySelector('[data-hydrate="p986cg"]').parentNode,
 			paths: {"base":"","assets":""},
 			session: {},
 			route: true,
