--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta http-equiv="content-security-policy" content="">
 	<link rel="stylesheet" href="/_app/assets/vendor-d0a5a38b.css">
 	<link rel="stylesheet" href="/_app/assets/pages/index.svelte-5c59e076.css">
-	<link rel="modulepreload" href="/_app/start-4f552520.js">
+	<link rel="modulepreload" href="/_app/start-8014d228.js">
 	<link rel="modulepreload" href="/_app/chunks/vendor-f5667196.js">
 	<link rel="modulepreload" href="/_app/layout.svelte-b028ef06.js">
 	<link rel="modulepreload" href="/_app/pages/index.svelte-998a5151.js">
@@ -64,8 +64,8 @@
     </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">14</button>
     </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">15</button>
     </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">16</button>
-    </div><div class="day svelte-1f2gkwh  is-today"><button class="day--label svelte-1f2gkwh selected highlighted" type="button">17</button>
-    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">18</button>
+    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">17</button>
+    </div><div class="day svelte-1f2gkwh  is-today"><button class="day--label svelte-1f2gkwh selected highlighted" type="button">18</button>
     </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">19</button>
     </div>
 </div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">20</button>
@@ -101,23 +101,23 @@
   <div class="pairs  svelte-1f7tk5u"><div class="pair  svelte-zlpy6h"><svg class="pin svelte-zlpy6h" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="whom svelte-zlpy6h"><span class="whomName svelte-zlpy6h">Александр Плаксенко</span>
     <span class="arrow svelte-zlpy6h"></span></div>
-  <div>Макриди Екатерина</div>
+  <div>Колодько Денис</div>
 </div><div class="pair  svelte-zlpy6h"><svg class="pin svelte-zlpy6h" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="whom svelte-zlpy6h"><span class="whomName svelte-zlpy6h">Колодько Денис</span>
     <span class="arrow svelte-zlpy6h"></span></div>
-  <div>Александр Плаксенко</div>
+  <div>Макриди Екатерина</div>
 </div><div class="pair  svelte-zlpy6h"><svg class="pin svelte-zlpy6h" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="whom svelte-zlpy6h"><span class="whomName svelte-zlpy6h">Макриди Екатерина</span>
     <span class="arrow svelte-zlpy6h"></span></div>
-  <div>Колодько Денис</div>
+  <div>Александр Плаксенко</div>
 </div></div>
 </main>
 
 
-		<script type="module" data-hydrate="4cx8ig">
-		import { start } from "/_app/start-4f552520.js";
+		<script type="module" data-hydrate="1oy6mn">
+		import { start } from "/_app/start-8014d228.js";
 		start({
-			target: document.querySelector('[data-hydrate="4cx8ig"]').parentNode,
+			target: document.querySelector('[data-hydrate="1oy6mn"]').parentNode,
 			paths: {"base":"","assets":""},
 			session: {},
 			route: true,
